<resources>
    <string name="app_name">Visualize Me By Photo</string>
    <string name="title_refresh"> </string>
    <string name="menu_title_person">인물</string>
    <string name="menu_title_home">홈</string>
    <string name="menu_title_search">검색</string>
    <string name="menu_title_graph">그래프</string>
    <string name="title_like">좋아요</string>

    <string name="title_person">내가 아는 사람들</string>
    <string name="title_search">검색</string>
    <string name="title_graph">지식 그래프</string>
    <string name="title_focusing">포커싱 검색</string>

    <string name="title_comment">설명</string>
    <string name="title_share">공유</string>

    <string-array name="filter_options">
        <item>가나다 순</item>
        <item>통화량 순</item>
        <item>사진 개수 순</item>
        <item>홈 화면에 추가한 인물</item>
    </string-array>

    <string name="user_input_eng">. 이 사진을 찾을 때 필요한 속성인 entity와 relationship을 추출할거야.
        entity는 사람이나 사물의 이름 또는 감정, 인종, 성별을 나타내는 단어이고,
        relationship은 entity가 속하는 카테고리로 \"person, color, animal, furniture, fruit, food, beverage, dessert, ice cream, clothing, jewelry, electronic_equipment, footwear, flower, street,
        building, cap, sports, glasses, sunset, sunrise, sky, toy, cup, car, 감정, 인종, 성별\" 중 하나야. 장소는 추출 하지 말고, 아이스크림은 ice cream으로 분류.
        예를 들어, \'아기가 바다에서 바나나와 아이스크림을 먹는 사진\' 이라면, \'3,baby,person,banana,fruit,ice cream,ice cream\'처럼 공백 없이 총 한 줄로 리턴.
        맨 앞의 숫자는 entity와 relationship을 한 쌍으로 봤을 때 총 개수를 의미. entity도 영어로 리턴.
        추출된 속성 쌍의 개수가 0이면, \'0\'을 리턴.</string>

    <string name="user_input_kor">지정된 카테고리에 해당하는 단어들을 모두 찾아.
        각 단어는 콤마(,)로 분리된 하나의 문자열로 리턴해. 만약 추출된 단어가 없다면 \'0\'을 리턴.
        카테고리:
        - 사람 이름
        - 색
        - 동물
        - 가구
        - 과일
        - 음식
        - 음료
        - 디저트
        - 빵
        - 옷
        - 쥬얼리
        - 전자제품
        - 신발
        - 채소
        - 꽃
        - 게임
        - 길거리
        - 아이스크림
        - 빌딩
        - 모자
        - 스포츠
        - 일몰
        - 일출
        - 장난감
        - 하늘
        - 차
        - 식물
        - 식기
        - 컵
        - 안경
        - 신체부위
        - 인생네컷
        - 네일아트
        - 바다
        - 텍스트
        - 나라
        - 도
        - 도시
        - 우편번호
        - 도로
        - 건물
        - 형식화된 주소
        - 밤/낮
        - 년
        - 월
        - 일
        - 시간
        - 계절
        - 플래시
        - 방향
        - 해상도

        예시:
        문장: 내가 서울에서 아이스크림을 먹는 사진
        결과: 나,서울,아이스크림

        문장: 남자가 바다에서 수영하는 사진
        결과: 남자,바다,수영

        문장: 나랑 홍철이가 같이 찍은 사진
        결과: 나,홍철

        문장: 5월에 나랑 강아지가 성북구에서 같이 찍은 사진
        결과: 5월,나,강아지,성북구

        문장: 모자 쓰고 있는 여자
        결과: 모자,여자

        다음 문장을 분석해:
    </string>


    <string name="explain_text_delete"><font color="#8D9CB5">※ 갤러리에서 삭제된 항목이 확인되었습니다.</font></string>
    <string name="explain_text_add"><font color="#8D9CB5">※ 갤러리에서 새로운 항목이 확인되었습니다.</font></string>
    <string name="explain_text_no_image"><font color="#b50101">※ 갤러리에 새로운 항목이 없습니다.</font></string>



    <string name="formatted_text_add"><font color="#0060F9">이미지 분석이 완료될 시 </font></string>
    <string name="formatted_text_delete"><font color="#0060F9">이미지 업데이트가 완료될 시</font></string>
    <string name="formatted_text_no_image"><font color="#0060F9">이미지 분석을 원할 시</font></string>


    <string name="formatted_text1"><font color="#0060F9">앱 알림으로 </font>알려드리겠습니다.</string>
    <string name="formatted_text2"><font color="#0060F9">이미지를 추가</font>해주세요.</string>


    <string name="title_text_add"><font color="#374F76">이미지 분석 중...</font></string>
    <string name="title_text_delete"><font color="#374F76">이미지 업데이트 중...</font></string>

    <string name="title_text_no_image"><font color="#374F76">분석할 이미지 없음</font></string>

    <string name="ranking_description_title">랭킹 산정 방법</string>
    <string name="ranking_description_text">본 랭킹은 \'인물 빈도\'와 \'전화 시간\' 두 가지 지표를 기반으로 합니다.
        \'인물 빈도\'는 갤러리의 사진 속에서 해당 인물이 나타난 횟수를 기준으로 하며,
        \'전화 시간\'은 해당 인물과의 총 통화 시간을 나타냅니다. 각 지표별로 독립적인 랭킹을 매긴 후,
        이를 합산하여 최종 순위를 결정하였습니다.
    </string>
    <string name="ranking_description_text_simple">랭킹은 인물의 사진 빈도수와 통화 시간을 기준으로 계산됩니다.</string>


</resources>