<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/icon_search"
        android:title="@string/menu_title_search" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icon_home"
        android:title="@string/menu_title_home" />
    <item
        android:id="@+id/navigation_graph"
        android:icon="@drawable/icon_graph"
        android:title="@string/menu_title_graph" />
    <item
        android:id="@+id/refresh"
        android:icon="@drawable/icon_refresh"
        android:title="@string/title_refresh" />
<!--    <item-->
<!--        android:id="@+id/navigation_like"-->
<!--        android:icon="@drawable/icon_like"-->
<!--        android:title="@string/title_like" />-->
</menu>