<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/image_analyze_alarm_background"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:paddingHorizontal="50dp"
    android:paddingVertical="10dp"
    >

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/spin_kit"
        style="@style/SpinKitView.Large.FadingCircle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:visibility="visible"
        app:SpinKit_Color="@color/blue_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleToSearchRecyclerView" />

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dp"
        android:text="@string/title_text_add"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/blue_grey"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/checkChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="30dp"
        android:text="@string/explain_text_add"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/explainAlarm1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/formatted_text_add"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/explainAlarm2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/formatted_text1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="15sp"
        android:textStyle="bold"
        android:paddingBottom="30dp"
        />

    <Button
        android:id="@+id/btnDialogOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ok_button_background"
        android:text="알겠습니다."
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        />



</LinearLayout>